F-Curve sliders won't update values during playback when mouse cursor is outside the left panel #41223

Closed
opened 2014-07-28 18:02:13 +02:00 by Hyuri Pimentel · 22 comments

System Information
Windows 8 Single Language 64-bit
Intel Core i7 @ 2.3~3.3GHz | 4 Cores / 8 Threads
NVIDIA GeForce GT 630M

Blender Version
Broken: (2.71 Hash: 9337574)

Short description of error
F-Curve sliders won't update during animation playback if the mouse cursor is outside the F-Curve's left panel when you trigger the action(Alt A or pressing the "Play animation" button in the Timeline). The values will only update if and while you point the cursor over the sliders and keep moving the cursor there.

Exact steps for others to reproduce the error
Press Alt A while the mouse cursor is outside the F-Curve's left panel; or press the "Play animation" button on the Timeline's header.
After that, also, move the cursor over the sliders and keep moving it there, the values will only update while you do that.

If you press Alt A while the cursor IS on the left panel, the values will update properly.

**System Information** Windows 8 Single Language 64-bit Intel Core i7 @ 2.3~3.3GHz | 4 Cores / 8 Threads NVIDIA GeForce GT 630M **Blender Version** Broken: (2.71 Hash: 9337574) **Short description of error** F-Curve sliders won't update during animation playback if the mouse cursor is outside the F-Curve's left panel when you trigger the action(Alt A or pressing the "Play animation" button in the Timeline). The values will only update if and while you point the cursor over the sliders and keep moving the cursor there. **Exact steps for others to reproduce the error** Press Alt A while the mouse cursor is outside the F-Curve's left panel; or press the "Play animation" button on the Timeline's header. After that, also, move the cursor over the sliders and keep moving it there, the values will only update while you do that. If you press Alt A while the cursor IS on the left panel, the values will update properly.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Hyuri

Added subscriber: @Hyuri

#41234 was marked as duplicate of this issue

#41234 was marked as duplicate of this issue
Author

I don't have permission to Edit the Task and add the .blend file, so I'm adding it here: f-curve_sliders_dont_update_bug.blend

I don't have permission to Edit the Task and add the .blend file, so I'm adding it here: [f-curve_sliders_dont_update_bug.blend](https://archive.blender.org/developer/F100045/f-curve_sliders_dont_update_bug.blend)

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2014-07-28 21:25:26 +02:00

This is a known glitch of current system, not considered a bug really (since values themselves are updated). We just want to avoid redrawing the whole UI each frame, saves some ressources for what’s really needs to be drawn.

This is a known glitch of current system, not considered a bug really (since values themselves *are* updated). We just want to avoid redrawing the whole UI each frame, saves some ressources for what’s really needs to be drawn.
Author

Oh, I see. So, then, it's a Design issue.
It's still an issue, though. It's really annoying to have to remember to hover the cursor over the left panel when you want to see the sliders values during the animation. It gets in the way by making you think about this technical detail that has nothing to do with the animation you're doing or the little change you're checking in your animation.

So wouldn't it be useful to reopen and change the type from "Bug" to "Design", then? For a future fix/reference?

What about updating only while you have the cursor present in the F-Curves window, even after pressing playback? And then if you move the cursor off the F-Curves window, it stops updating; if you move it back, it updates again.
It would be less annoying because you could play and then hover the cursor there if you want to see the values updating. Now you playback and realize the values are not updating and then you have to stop the animation, hover the cursor over the F-Curves window and then play it again.
It's really irritating after a while and kills time.

Oh, I see. So, then, it's a Design issue. It's still an issue, though. It's really annoying to have to remember to hover the cursor over the left panel when you want to see the sliders values during the animation. It gets in the way by making you think about this technical detail that has nothing to do with the animation you're doing or the little change you're checking in your animation. So wouldn't it be useful to reopen and change the type from "Bug" to "Design", then? For a future fix/reference? What about updating only *while* you have the cursor present in the F-Curves window, even after pressing playback? And then if you move the cursor off the F-Curves window, it stops updating; if you move it back, it updates again. It would be less annoying because you could play and *then* hover the cursor there if you want to see the values updating. Now you playback and realize the values are not updating and then you have to stop the animation, hover the cursor over the F-Curves window and then play it again. It's really irritating after a while and kills time.

Added subscribers: @MarioSottile, @mont29

Added subscribers: @MarioSottile, @mont29

◀ Merged tasks: #41234.

◀ Merged tasks: #41234.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

Added subscribers: @neXyon, @ideasman42

Added subscribers: @neXyon, @ideasman42

Hrrrm… Actually, looks like I was wrong and there is an issue here, will check this (thanks to @neXyon and @ideasman42 here).

Hrrrm… Actually, looks like I was wrong and there is an issue here, will check this (thanks to @neXyon and @ideasman42 here).

This issue was referenced by 42ba931fed

This issue was referenced by 42ba931fedf7e994781d80ad919e0b02aec9019f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 42ba931fed.

Closed by commit 42ba931fed.
Author

Awesome guys! Thank you all for your time!

Awesome guys! Thank you all for your time!
Author

I've just noticed that this issue also happens with sliders in other panels. It seems to be a global behavior regarding sliders. If I play the animation while the mouse cursor is outside panels that has sliders, those sliders won't "update".

I've tested Branch: testbuild Hash: 3d4f540 and it doesn't happen in the F-Curves anymore(Apparently because of the commit you guys did) but it still happens in other panels.

I've just noticed that this issue also happens with sliders in other panels. It seems to be a global behavior regarding sliders. If I play the animation while the mouse cursor is outside panels that has sliders, those sliders won't "update". I've tested Branch: testbuild Hash: 3d4f540 and it doesn't happen in the F-Curves anymore(Apparently because of the commit you guys did) but it still happens in other panels.
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

Why can't I edit the task, being the author? I think it'd be appropriate to change the title now that it doesn't seem to be specific to the F-Curves Window.

Why can't I edit the task, being the author? I think it'd be appropriate to change the title now that it doesn't seem to be specific to the F-Curves Window.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

For other editors, you have to enable them in the 'Playback' menu of the Timeline editor… No bug here.

For other editors, you have to enable them in the 'Playback' menu of the Timeline editor… No bug here.
Author

Awesome! Thank you!

Awesome! Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41223
No description provided.