Fix T41223: F-Curve sliders won't update values during playback when mouse cursor is outside the left panel.